@@ -4,6 +4,11 @@
 Note: This file contains a list changes in the 'default' branch.
 
 
+2018-11-16
+
+  - Added more logging in loader (done while debugging something else).
+
+
 2018-10-26
 
   - Fixed #302: Fixed second bug with font-locking for account names (starting
